# QtPractice

./: CMakeLists.txt  Makefile
CMakeMods/: Addall.cmake
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/includes/: CMakeLists.txt
libs/includes/Binder/: Binder.hpp
libs/includes/Core/: DateTime.hpp
libs/includes/QDebugger/: Debugger.hpp  test.hpp
libs/src/: CMakeLists.txt
libs/src/Binder/: Binder.cpp
libs/src/Core/: DateTime.cpp
libs/src/QDebugger/: Debugger.cpp  test.cpp
